# stock-fundamentals-ai-using-deepinfra

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_runs_report_column.py
backend/app/: main.py
backend/app/agents/: __init__.py  deps.py  events.py  financials.py  llm.py  management.py  orchestrator.py  risk.py  thesis.py  valuation.py
backend/app/api/: agents.py  analyze.py  health.py  router.py  tickers.py  ws.py
backend/app/core/: config.py  db.py  logging.py
backend/app/data/: annual_report.py  peers.py  rate_limiter.py  screener_scraper.py  tickers_seed.py  yfinance_client.py
backend/app/schemas/: agents.py  annual_report.py  financials.py  management.py  risk.py  run.py  thesis.py  valuation.py
backend/app/services/: cache.py  event_bus.py  ratios.py  run_registry.py  runs_repo.py  valuation.py
backend/scripts/: smoke_financials_agent.py  smoke_management_agent.py  smoke_orchestrator.py  smoke_valuation_agent.py  smoke_yfinance.py
backend/tests/: conftest.py  test_annual_report_extractor.py  test_cache.py  test_financials_agent.py  test_health.py  test_orchestrator.py  test_ratios.py  test_risk_agent.py  test_screener_parser.py  test_thesis_agent.py  test_valuation_agent.py  test_valuation_service.py  test_yfinance_client.py
web/: .dockerignore  Dockerfile  next.config.mjs  package.json  tsconfig.json
web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/app/about/: page.tsx
web/app/analyze/[ticker]/: page.tsx
web/app/report/[run_id]/: not-found.tsx  page.tsx
web/components/: agent-activity-panel.tsx  disclaimer.tsx  kill-switch.tsx  providers.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx  ticker-search.tsx
web/components/report/: financials-section.tsx  finding-card.tsx  management-section.tsx  report-tabs.tsx  risk-section.tsx  thesis-card.tsx  valuation-section.tsx
web/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  tabs.tsx
web/lib/: api.ts  schema.ts  use-run-events.ts  utils.ts
